--- a/.gitea/workflows/start_release.yml
+++ b/.gitea/workflows/start_release.yml
@@ -30,5 +30,5 @@ jobs:
         uses: ./.gitea/actions/start-release
         with:
           type: '${{ gitea.event.pull_request.labels[0].name }}'
-          working-directory: ./packages/$module
+          working-directory: ./packages/${{ env.module }}
           token: ${{ secrets.GIT_TOKEN }}
