--- a/.gitea/workflows/start_release.yml
+++ b/.gitea/workflows/start_release.yml
@@ -23,6 +23,9 @@ jobs:
           fetch-depth: 0
           submodules: true
       - 
+        name: Checkout Modules
+        run: git submodule update --remote
+      - 
         name: Setup Node
         run: npm ci
       - 
