--- a/.gitea/workflows/validation.yml
+++ b/.gitea/workflows/validation.yml
@@ -30,7 +30,7 @@ jobs:
       - 
         name: Module Validation
         working-directory: ./packages/${{ env.module }}
-        run: npx vistta package outdated
+        run: npx vistta packages outdated
       - 
         name: Eslint Validation
         working-directory: ./packages/${{ env.module }}
