--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@vistta/cli",
   "version": "0.2.0",
-  "description": "Vistta CLI (NodeJS Loaders Adapter)",
   "type": "module",
   "main": "index.js",
   "exports": {
@@ -28,8 +27,6 @@
     "type": "git",
     "url": "https://git.vistta.org/vistta/cli.git"
   },
-  "author": "Tiago Terenas Almeida",
-  "license": "CC BY-NC-ND 4.0 DEED",
   "engines": {
     "node": ">=22.0.0"
   },
@@ -39,5 +36,8 @@
     "@vistta/utils": "*",
     "esbuild": "^0.24.0",
     "semver": "^7.6.3"
-  }
+  },
+  "author": "Tiago Terenas Almeida",
+  "license": "CC BY-NC-ND 4.0 DEED",
+  "description": "Vistta CLI (NodeJS Loaders Adapter)"
 }
