--- a/.gitea/workflows/validation.yml
+++ b/.gitea/workflows/validation.yml
@@ -10,7 +10,7 @@ jobs:
   Validation:
     runs-on: ubuntu-latest
     container:
-      image: node:22
+      image: node:latest
     steps:
       -
         name: Checkout
