--- a/.gitea/workflows/validation.yml
+++ b/.gitea/workflows/validation.yml
@@ -26,13 +26,14 @@ jobs:
         run: git submodule update --remote
       - 
         name: Setup Node
-        run: npm ci
+        run: npm i
       - 
         name: Close Issues
         uses: ./.gitea/actions/close-issues
         with:
           working-directory: ./packages/${{ env.module }}
           token: ${{ secrets.GIT_TOKEN }}
+        continue-on-error: true
       - 
         name: Module Validation
         working-directory: ./packages/${{ env.module }}
@@ -40,11 +41,13 @@ jobs:
       - 
         name: Eslint Validation
         working-directory: ./packages/${{ env.module }}
+        continue-on-error: true
         run: npx eslint .
       - 
         name: Typescript Validation
         working-directory: ./packages/${{ env.module }}
-        run: npx tsc
+        continue-on-error: true
+        run: npx tsc .
       - 
         name: Unit Tests
         working-directory: ./packages/${{ env.module }}
