--- a/.gitea/workflows/validation.yml
+++ b/.gitea/workflows/validation.yml
@@ -47,11 +47,19 @@ jobs:
         name: Unit Tests
         working-directory: ./packages/${{ env.module }}
         run: npx vistta test
-# Beta
+        
+  Beta:
+    needs: Validation
+    runs-on: ubuntu-latest
+    container:
+      image: node:latest
+    steps:
+      - 
+        name: Checkout
+        uses: tiagomta/checkout@v1
       - 
         name: Publish Package (Gitea)
         uses: tiagomta/npm@v1
         with:
-          working-directory: ./packages/${{ env.module }}
           command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --beta
           token: ${{ secrets.GIT_TOKEN }}
