--- a/.gitea/workflows/validation.yml
+++ b/.gitea/workflows/validation.yml
@@ -48,7 +48,7 @@ jobs:
         working-directory: ./packages/${{ env.module }}
         run: npx vistta test
         
-  Beta:
+  Snapshot:
     needs: Validation
     runs-on: ubuntu-latest
     container:
@@ -58,8 +58,13 @@ jobs:
         name: Checkout
         uses: tiagomta/checkout@v1
       - 
+        name: Snapshot Release
+        uses: tiagomta/npm@v1
+        with:
+          command: version snapshot --email devops@vistta.org
+      - 
         name: Publish Package (Gitea)
         uses: tiagomta/npm@v1
         with:
-          command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --beta
+          command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag snapshot
           token: ${{ secrets.GIT_TOKEN }}
