--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vistta/cli",
-  "version": "0.1.0",
+  "version": "0.1.0-snapshot.1",
   "type": "module",
   "main": "index.js",
   "exports": {
