--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,8 @@
     "skipLibCheck": true,
     "jsx": "react",
     "typeRoots": ["./global.d.ts"],
+    "paths": {
+      "@/*": ["./*"]
+    }
   }
 }
