--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vistta/cli",
-  "version": "0.1.0-snapshot.4",
+  "version": "0.1.0",
   "type": "module",
   "main": "index.js",
   "exports": {
@@ -28,9 +28,9 @@
     "node": ">=22.0.0"
   },
   "dependencies": {
-    "@vistta/console": "0.1.0",
-    "@vistta/fs": "0.1.0",
-    "@vistta/utils": "0.1.1",
+    "@vistta/console": "*",
+    "@vistta/fs": "*",
+    "@vistta/utils": "*",
     "esbuild": "^0.24.0",
     "semver": "^7.6.3"
   },
