--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "exports": {
     ".": "./index.js",
-    "./default": "./cli/default.js",
-    "./packages": "./cli/packages.js",
-    "./test": "./cli/test.js",
-    "./tsconfig": "./tsconfig.json",
+    "./config": "./tsconfig.json",
+    "./commands/default": "./commands/default.js",
+    "./commands/bundle": "./commands/bundle.js",
+    "./commands/project": "./commands/project.js",
+    "./commands/test": "./commands/test.js",
     "./loaders/bundler": "./loaders/bundler.js",
     "./loaders/file": "./loaders/file.js",
     "./loaders/json": "./loaders/json.js",
