--- a/.gitea/workflows/publish.yml
+++ b/.gitea/workflows/publish.yml
@@ -18,6 +18,11 @@ jobs:
         with:
           command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag stable
           token: ${{ secrets.TOKEN }}
+      - name: Publish Package (NPM)
+        uses: tiagomta/npm@v1
+        with:
+          command: publish --scope vistta
+          token: ${{ secrets.NPM_TOKEN }}
       - name: Tag
         id: tag
         uses: tiagomta/npm@v1
