--- a/.gitea/workflows/development.yml
+++ b/.gitea/workflows/development.yml
@@ -1,9 +1,8 @@
 name: Development Workflow
 on:
-  pull_request:
-    types: [synchronize]
+  push:
     branches:
-      - master
+      - development
 env:
   module: cli
 jobs:
@@ -35,6 +34,7 @@ jobs:
       - name: Eslint Validation
         working-directory: ./packages/${{ env.module }}
         run: npx eslint .
+        continue-on-error: true
       - name: Typescript Validation
         working-directory: ./packages/${{ env.module }}
         run: npx tsc
@@ -42,21 +42,21 @@ jobs:
       - name: Unit Tests
         working-directory: ./packages/${{ env.module }}
         run: npx vistta test
-
-  Snapshot:
-    needs: Validation
-    runs-on: ubuntu-latest
-    container:
-      image: node:latest
-    steps:
-      - name: Checkout
-        uses: tiagomta/checkout@v1
-      - name: Snapshot Release
-        uses: tiagomta/npm@v1
-        with:
-          command: version snapshot ${{ gitea.run_id }} --email devops@vistta.org
-      - name: Publish Package (Gitea)
-        uses: tiagomta/npm@v1
-        with:
-          command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag snapshot
-          token: ${{ secrets.TOKEN }}
+#
+#  Snapshot:
+#    needs: Validation
+#    runs-on: ubuntu-latest
+#    container:
+#      image: node:latest
+#    steps:
+#      - name: Checkout
+#        uses: tiagomta/checkout@v1
+#      - name: Snapshot Release
+#        uses: tiagomta/npm@v1
+#        with:
+#          command: version snapshot ${{ gitea.run_id }} --email devops@vistta.org
+#      - name: Publish Package (Gitea)
+#        uses: tiagomta/npm@v1
+#        with:
+#          command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag snapshot
+#          token: ${{ secrets.TOKEN }}
