--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://git.vistta.org/vistta/cli.git"
+    "url": "https://github.com/vistta-org/cli"
   },
   "engines": {
     "node": ">=22.0.0"
@@ -36,6 +36,6 @@
     "semver": "^7.7.2"
   },
   "author": "Tiago Terenas Almeida",
-  "license": "CC BY-NC-ND 4.0 DEED",
-  "description": "Vistta CLI (NodeJS and NPM wrapper for Loaders Adapter)"
+  "license": "Apache 2.0 with Commons Clause",
+  "description": "Vistta CLI is a framework for extending the Node.js loader API and building reusable, customizable commands tools"
 }
