--- a/.gitea/workflows/development.yml
+++ b/.gitea/workflows/development.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           token: ${{ secrets.TOKEN }}
           working-directory: ./packages/${{ env.module }}
-          command: issues close --fromCommit --milestone ${{ gitea.event.pull_request.milestone.id }}
+          command: issues close --fromCommit
       - name: Setup Node
         run: npm ci
       - name: Module Validation
@@ -42,21 +42,14 @@ jobs:
       - name: Unit Tests
         working-directory: ./packages/${{ env.module }}
         run: npx vistta test
-#
-#  Snapshot:
-#    needs: Validation
-#    runs-on: ubuntu-latest
-#    container:
-#      image: node:latest
-#    steps:
-#      - name: Checkout
-#        uses: tiagomta/checkout@v1
-#      - name: Snapshot Release
-#        uses: tiagomta/npm@v1
-#        with:
-#          command: version snapshot ${{ gitea.run_id }} --email devops@vistta.org
-#      - name: Publish Package (Gitea)
-#        uses: tiagomta/npm@v1
-#        with:
-#          command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag snapshot
-#          token: ${{ secrets.TOKEN }}
+      - name: Development Release
+        uses: tiagomta/npm@v1
+        with:
+          working-directory: ./packages/${{ env.module }}
+          command: version custom +development.${{ gitea.run_id }} --email devops@vistta.org
+      - name: Publish Development Release (Gitea)
+        uses: tiagomta/npm@v1
+        with:
+          working-directory: ./packages/${{ env.module }}
+          command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag snapshot
+          token: ${{ secrets.TOKEN }}
