--- a/.gitea/workflows/development.yml
+++ b/.gitea/workflows/development.yml
@@ -44,12 +44,14 @@ jobs:
         run: npx vistta test
       - name: Development Release
         uses: tiagomta/npm@v1
+        working-directory: ./packages/${{ env.module }}
         with:
           working-directory: ./packages/${{ env.module }}
           command: version custom +development.${{ gitea.run_id }} --email devops@vistta.org
       - name: Publish Development Release (Gitea)
         uses: tiagomta/npm@v1
+        working-directory: ./packages/${{ env.module }}
         with:
           working-directory: ./packages/${{ env.module }}
-          command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag snapshot
+          command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag development
           token: ${{ secrets.TOKEN }}
