--- a/.gitea/workflows/development.yml
+++ b/.gitea/workflows/development.yml
@@ -6,7 +6,7 @@ on:
 env:
   module: cli
 jobs:
-  Validation:
+  Development:
     runs-on: ubuntu-latest
     container:
       image: node:latest
@@ -42,3 +42,14 @@ jobs:
       - name: Unit Tests
         working-directory: ./packages/${{ env.module }}
         run: npx vistta test
+      - name: Development Release
+        uses: tiagomta/npm@v1
+        with:
+          working-directory: ./packages/${{ env.module }}
+          command: version development ${{ gitea.run_id }} --email devops@vistta.org
+      - name: Publish Development Release (Gitea)
+        uses: tiagomta/npm@v1
+        with:
+          working-directory: ./packages/${{ env.module }}
+          command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag development
+          token: ${{ secrets.TOKEN }}
