--- a/.gitea/workflows/development.yml
+++ b/.gitea/workflows/development.yml
@@ -51,5 +51,4 @@ jobs:
         uses: tiagomta/npm@v1
         with:
           working-directory: ./packages/${{ env.module }}
-          command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag development --workspace @vistta/cli
-          token: ${{ secrets.TOKEN }}
+          command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag development
