--- a/.gitea/workflows/development.yml
+++ b/.gitea/workflows/development.yml
@@ -6,7 +6,7 @@ on:
 env:
   module: cli
 jobs:
-  Development:
+  Validation:
     runs-on: ubuntu-latest
     container:
       image: node:latest
@@ -42,11 +42,21 @@ jobs:
       - name: Unit Tests
         working-directory: ./packages/${{ env.module }}
         run: npx vistta test
-      - name: Devevelopment Channel
-        run: |
-          npm config set @vistta:registry https://git.vistta.org/api/packages/vistta/npm/
-          npm config set //git.vistta.org/api/packages/vistta/npm/:_authToken=${{ secrets.NPM_TOKEN }}
-          cd ./packages/${{ env.module }}
-          npx vistta project version prerelease development
-          npm publish --scope @vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag latest
-          npm dist-tag add @vistta/${{ env.module }}@$(npx vistta project version) development
+
+  PreRelease:
+    needs: Validation
+    runs-on: ubuntu-latest
+    container:
+      image: node:latest
+    steps:
+      - name: Checkout
+        uses: tiagomta/checkout@v1
+      - name: Development PreRelease
+        uses: tiagomta/npm@v1
+        with:
+          command: version prerelease development-${{ gitea.run_id }} --email devops@vistta.org
+      - name: Publish PreRelease (Gitea)
+        uses: tiagomta/npm@v1
+        with:
+          command: publish --scope vistta --registry https://git.vistta.org/api/packages/vistta/npm/ --tag development
+          token: ${{ secrets.TOKEN }}
