--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vistta-org/cli.git"
+    "url": "https://github.com/vistta-org/cli"
   },
   "engines": {
     "node": ">=22.0.0"
