--- a/.gitea/workflows/development.yml
+++ b/.gitea/workflows/development.yml
@@ -7,7 +7,6 @@ on:
     types: [synchronize]
     branches:
       - master
-
 env:
   module: cli
 jobs:
@@ -25,7 +24,6 @@ jobs:
           fetch-depth: 0
           submodules: true
       - name: Close Issues
-        if: gitea.event_name == 'push'
         uses: tiagomta/gitea@v1
         with:
           token: ${{ secrets.TOKEN }}
@@ -36,21 +34,20 @@ jobs:
       - name: Module Validation
         working-directory: ./packages/${{ env.module }}
         run: npx vistta project outdated
-        continue-on-error: ${{ gitea.event_name == 'push' }}
+        continue-on-error: true
       - name: Eslint Validation
         working-directory: ./packages/${{ env.module }}
         run: npx eslint .
-        continue-on-error: ${{ gitea.event_name == 'push' }}
+        continue-on-error: true
       - name: Typescript Validation
         working-directory: ./packages/${{ env.module }}
         run: npx tsc
-        continue-on-error: ${{ gitea.event_name == 'push' }}
+        continue-on-error: true
       - name: Unit Tests
         working-directory: ./packages/${{ env.module }}
         run: npx vistta test
 
   PreRelease:
-    if: gitea.event_name == 'push'
     needs: Validation
     runs-on: ubuntu-latest
     container:
