--- a/.gitea/workflows/development.yml
+++ b/.gitea/workflows/development.yml
@@ -34,20 +34,21 @@ jobs:
       - name: Module Validation
         working-directory: ./packages/${{ env.module }}
         run: npx vistta project outdated
-        continue-on-error: ${{ gitea.event_name == 'push' }}
+        continue-on-error: true
       - name: Eslint Validation
         working-directory: ./packages/${{ env.module }}
         run: npx eslint .
-        continue-on-error: ${{ gitea.event_name == 'push' }}
+        continue-on-error: true
       - name: Typescript Validation
         working-directory: ./packages/${{ env.module }}
         run: npx tsc
-        continue-on-error: ${{ gitea.event_name == 'push' }}
+        continue-on-error: true
       - name: Unit Tests
         working-directory: ./packages/${{ env.module }}
         run: npx vistta test
 
   PreRelease:
+    if: gitea.event_name == 'push'
     needs: Validation
     runs-on: ubuntu-latest
     container:
