--- a/.gitea/workflows/development.yml
+++ b/.gitea/workflows/development.yml
@@ -3,10 +3,6 @@ on:
   push:
     branches:
       - development
-  pull_request:
-    types: [synchronize]
-    branches:
-      - master
 env:
   module: cli
 jobs:
@@ -34,15 +30,15 @@ jobs:
       - name: Module Validation
         working-directory: ./packages/${{ env.module }}
         run: npx vistta project outdated
-        continue-on-error: ${{ gitea.event_name == 'push' }}
+        continue-on-error: true
       - name: Eslint Validation
         working-directory: ./packages/${{ env.module }}
         run: npx eslint .
-        continue-on-error: ${{ gitea.event_name == 'push' }}
+        continue-on-error: true
       - name: Typescript Validation
         working-directory: ./packages/${{ env.module }}
         run: npx tsc
-        continue-on-error: ${{ gitea.event_name == 'push' }}
+        continue-on-error: true
       - name: Unit Tests
         working-directory: ./packages/${{ env.module }}
         run: npx vistta test
