--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -33,13 +33,13 @@ jobs:
           run: |
             git.config("user.email", "devops@vistta.org");
             const version = await npm.version("${{ inputs.type }}".toLowerCase());
-            result = version;
+            result.version = version;
       - name: Gitea Release
         uses: tiagomta/nodejs-run@v1
         with:
           target: inline
           run: |
-            console.log("${{ steps.npm.outputs.result }}");
+            console.log("${{ steps.npm.outputs.result.version }}");
 
 #            const issues = await gitea.issues.list({ state: "closed" });
 #            const milestone = await gitea.milestones.create("${{ inputs.type }} (v" + version + ")");
