--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
           run: |
             git.config("user.email", "devops@vistta.org");
             const version = await npm.version("${{ inputs.type }}".toLowerCase());
-            result.version = version;
+            result = version;
       - name: Gitea Release
         uses: tiagomta/nodejs-run@v1
         with:
