--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -34,7 +34,8 @@ jobs:
             await git.config("user.email", "devops@vistta.org");
             const version = await npm.version("${{ inputs.type }}".toLowerCase());
             await git.push("origin", "${{ env.ref }}", "--tags");
-            await git.checkout("origin/master");
+            await git.fetch("origin", "master");
+            await git.checkout("master");
             await git.merge(`${{ env.ref }} --ff-only`);
             await git.push("origin", "master");
             await npm.publish();
