--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -34,11 +34,9 @@ jobs:
             await git.config("user.email", "devops@vistta.org");
             const version = await npm.version("${{ inputs.type }}".toLowerCase());
             await git.push("origin", "${{ env.ref }}", "--tags");
-            await git.fetch("origin", "master");
             await git.checkout("master");
-            await git.merge("--squash", "${{ env.ref }}");
-            await git.commit(`-m "${{ inputs.type }} (${version})"`)
-            await git.push("origin", "master");
+            await git.reset("--hard", "${{ env.ref }}");
+            await git.push("origin", "master", "--force");
             // Release Gitea
             npm.config("set", "@vistta:registry", "https://git.vistta.org/api/packages/vistta/npm/");
             npm.config("set", "--", "//git.vistta.org/api/packages/vistta/npm/:_authToken", "${{ secrets.TOKEN }}");
