--- a/.gitea/workflows/release.yml
+++ b/.gitea/workflows/release.yml
@@ -34,6 +34,7 @@ jobs:
             await git.config("user.email", "devops@vistta.org");
             const version = await npm.version("${{ inputs.type }}".toLowerCase());
             await git.push("origin", "${{ env.ref }}", "--tags");
+            await git.fetch("origin", "master");
             await git.checkout("master");
             await git.reset("--hard", "${{ env.ref }}");
             await git.push("origin", "master", "--force");
