--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vistta/cli",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "type": "module",
   "main": "index.js",
   "exports": {
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/vistta-org/cli"
+    "url": "https://github.com/vistta-org/cli.git"
   },
   "engines": {
     "node": ">=22.0.0"
